--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#24adae', end
 
 }
 
+.light-grey{
+  background-color: #e9e9e9
+}
+
+/*
+///////////////////////////navigation/////////////////////*/
 
 .nav>li>a {
     position: relative;
     display: block;
     padding: 30px 15px;
   }
+
+.nav-height{
+  padding-bottom: 30px;
+  padding-top: 30px;
+
+}
 
 .btn-xl {
  
@@ -29,6 +41,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#24adae', end
   margin-right: 20px;
 
 }
+
+
+/*/////////////////////heading//////////////////////////*/
 
 
 #main-heading{
@@ -53,12 +68,48 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#24adae', end
     line-height: 33px;
 }
 
-.nav-height{
-  padding-bottom: 30px;
-  padding-top: 30px;
 
-}
 .header-content-inner{
   text-align: left;
   font-family: 'Lato', sans-serif;
 }
+
+
+
+
+
+/*////////////////////////section1/////////////////////*/
+
+#section1{
+  background-color: #e9e9e9
+}
+
+.image{
+  width: 65%;
+
+}
+
+
+
+
+
+
+
+
+
+/*
+//////////////////////space-line/////////////////////*/
+
+.line{
+  height: 25px;
+  -webkit-box-shadow: 0px 6px 5px -1px rgba(0,0,0,0.29);
+-moz-box-shadow: 0px 6px 5px -1px rgba(0,0,0,0.29);
+box-shadow: 0px 6px 5px -1px rgba(0,0,0,0.29);
+} 
+
+
+
+
+
+
+
