--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,13 @@ box-shadow: 0px 6px 5px -1px rgba(0,0,0,0.29);
 }
 
 
+/*///////////////////////////steps////////////////////*/
+
+.steps-i{
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
 
 /*//////////////////////////////////one-liner////////////////////*/
 
