--- a/css/main.css
+++ b/css/main.css
@@ -222,11 +222,12 @@ box-shadow: 0px 6px 5px -1px rgba(0,0,0,0.29);
 
 
 .icon-style{
-  text-align: center
+  text-align: center;
+  cursor: pointer;
 }
 
 .icon-s{
-   width: 25%
+   width: 25%;
 
 }
 
